fixed some page spacing

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1, h2, h3{
     margin: auto;
     position: relative;
     top: 0; left: 0; bottom: 0; right: 0;
-    padding: 100px 10px 50px 10px;
+    padding: 10% 10px 50px 10px;
     vertical-align: middle;
     color: #EDEAE2;
 }
